fix some examples and close ipc wire when session is closed